spacing fixed, but I don't love it

--- a/src/components/ReviewCarousel/styles.css
+++ b/src/components/ReviewCarousel/styles.css
@@ -53,25 +53,8 @@
 }
 
 
-@media only screen and (min-width: 640px) {
-  .carousel-content > * {
-    width: calc(33% - 15.7px);
-  }
-}
-
-
-/* @media only screen and (min-width: 820px) {
-  .carousel-content > * {
-    width: calc(50% - 32px);
-  }
-} */
-
 
 @media only screen and (min-width: 1024px) {
-  .carousel-content > * {
-    width: calc(33% - 14.5px);
-  }
-
   .index-circle {
     display: block;
   }
